# povtas

./: .gitignore  README.md  pyproject.toml  setup.py
povtas/: __init__.py  main.py
povtas/povtas/: __init__.py  main.py
src/povtas/: __init__.py  main  main.py
