[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "povtas"
version = "0.1"
authors = [
  { name="totoLab", email="antoniolabate19@gmail.com" },
]
description = "Turns every r of a word in a v"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/totolab/povtas/issues"
